models/parsernode.js
module.exports = (function() {
  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { program: peg$parseprogram },
        peg$startRuleFunction  = peg$parseprogram,

        peg$c0 = function(b) { /* Declaración de la estructura principal que contendrá a todas las demás */
              b.name = { /* Atributo name que contiene el tipo */
              type: 'ID', 
              value: "$main"
            }; 
            b.params = []; /* Array que contiene los parámetros del programa */
            return b;
        },
        peg$c1 = function(cD, vD, fD, st) { 
          let constants = cD? cD : []; /* constanst puede estar vacía si no se realiza declaración de las mismas */
          let variables = vD? vD : []; /* variables puede estar vacía si no se realiza declaración de las mismas */ 
          return { /* Definición del valor semántico */
              type: 'BLOCK', 
              constants: constants, 
              variables: variables,
              functions: fD,
              main: st
          };
        },
        peg$c2 = function(id, nu, rest) { /* const ejemplo1 = 1, ejemplo2 = 2; */
          let declaration = rest.map( ([_, id, __, nu]) => [id.value, nu.value] ); /* Ignoramos la coma y el igual, ya que no nos interesa */
          return [[id.value, nu.value]].concat(declaration) /* El valor semántico será un array de parejas con los id y los valores de las constantes */
        },
        peg$c3 = function(id, val1, rest) {  /* Permitimos la inicialización de las variables */ 
          let v1 = val1? val1 : undefined; /* val1 puede estar vacía si no se realiza declaración de las mismas */
          let declaration = rest.map( ([_, id, __, val2]) => [id.value, val2] ); /* Ignoramos la coma y el igual */
          declaration.forEach( (array) => { /* eliminamos el null como valor de inicialiazión de la variable */
            if(!array[1])
              array[1] = undefined } 
          ); 
          return [[id.value, v1]].concat(declaration) /* El valor semántico será un array de parejas con los nombres de las variables declaradas */
        },
        peg$c4 = function(param1, rest, b) {
              let params = param1? [param1] : []; /* Puede estar vacío si no declaran parametros, o contener el primer parámetro */
              if(param1) /* Si existe el primer parámetro */
                params = params.concat(rest.map(([_, p]) => p)); /* Concatenamos con el primer parámetro anterior el resto, si los hubiese (ignoramos comas) */
                
              let ret = undefined; /* Contemplamos la posibilidad de que no exista el return */
              let i = b.main.length - 1; /* Almacenamos la posición del último elemento, que se debería corresponder con el return si existe */
              if(b.main[i].type = 'RETURN'); /* Si existe el return */
                ret = b.main[i].children;
            
              return { /* Asignamos al objeto del bloque que la contiene, el nuevo tipo, es decir, FUNCTION */
                  type: 'ANONYMOUS_FUNCTION',
                  params: params, /* Array con los nombres de los parámetros */
                  st: b,
                  ret: ret
              };
            },
        peg$c5 = function(id, param1, rest, b) { /* Evitamos ejemplo(, parametro) */
            let params = param1? [param1] : []; /* Puede estar vacío si no declaran parametros, o contener el primer parámetro */
            if(param1) /* Si existe el primer parámetro */
              params = params.concat(rest.map(([_, p]) => p)); /* Concatenamos con el primer parámetro anterior el resto, si los hubiese (ignoramos comas) */
            let ret = undefined; /* Contemplamos la posibilidad de que no exista el return */
            let i = b.main.length - 1; /* Almacenamos la posición del último elemento, que se debería corresponder con el return si existe */
            if(b.main[i].type = 'RETURN'); /* Si existe el return */
              ret = b.main[i].children;
            return Object.assign({ /* Asignamos al objeto del bloque que la contiene, el nuevo tipo, es decir, FUNCTION */
                type: 'FUNCTION',
                name: id,
                params: params, /* Array con los nombres de los parámetros */
                ret: ret
            }, b);
        },
        peg$c6 = function(s1, rest) { /* Sentencias, aceptando compuestas entre {} */
              let array_st = [];
              if (s1) /* Si existe la primera sentencia */
                  array_st.push(s1); /* Lo introducimos en el array de sentencias */
              return {
                  type: 'COMPOUND', 
                  children: array_st.concat(rest.map( ([_, statement]) => statement )) /* Introducimos el resto de sentencias en el array */
               };
            },
        peg$c7 = function(e, st, sf) { /* Sentencias IF-THEN-ELSE */
              return {
                  type: 'IFELSE',
                  cond:  e,
                  children_if: st,
                  children_else: sf,
              };
            },
        peg$c8 = function(e, st) { /* Sentencias IF-THEN */
              return {
                  type: 'IF',
                  cond:  e,
                  children: st
              };
            },
        peg$c9 = function(e, st) { /* Bucle WHILE */
              return {
                  type: 'WHILE',
                  cond: e,
                  children: st
              };
            },
        peg$c10 = function(i, cond, inc, st) { /* Bucle FOR */
              return {
                  type: 'FOR',
                  index: i.left,
                  condition: cond.type,
                  increment: inc,
                  children: st
              };
            },
        peg$c11 = function(a) { /* Se permite únicamente el return */     
              return { 
                  type: 'RETURN', 
                  children: a? a : undefined 
                };
            },
        peg$c12 = function(i, f) {
              return {
                type: '=',
                left: i,
                right: f
              };
            },
        peg$c13 = function(i, s) {
                    return {
                      type: '=',
                      left: i,
                      right: s
                    }
                },
        peg$c14 = function(n, e) { /* Asignaciones, ejemplo[2] = 5 */
            return {
                type: '=', 
                left: n, 
                right: e
              }; 
            },
        peg$c15 = function(i, e) { /* Asignaciones para array, ejemplo = 5 */  
              return {
                type: '=', 
                left: i, 
                right: e
              }; 
            },
        peg$c16 = function(l, op, r) { /* Condiciones */
            return { 
                type: op, /* Como tipo usamos el token COND usado en la comparación */
        				left: l,
        				right: r
        	  	};
            },
        peg$c17 = function(t, r) { return tree(t,r); },
        peg$c18 = function(f, r) { return tree(f,r); },
        peg$c19 = function(name, a, rest) { /* Llamadas a funciones */
            let array_arg = [];
            if (a)
              array_arg.push(a); /* Incluimos el primer argumento en el array */
             
            return { 
                type: 'CALL',
                func: name,
                arguments: array_arg.concat(rest.map(([_, exp]) => exp)) /* Concatenamos en el array con el resto de argumentos */
            };
           },
        peg$c20 = function(t) { return t; },
        peg$c21 = function(a1, rest) {  /* Ejemplo de declaración de array: [3+2, 4, 5*a, b = 4]. Posibilidad de array vacío */
            let arr = a1? [a1] : [];
            if(a1) /* Si existe el primer assign */
              arr = arr.concat(rest.map(([_, a]) => a)); /* Concatenamos con el primer assign anterior el resto, si los hubiese (ignoramos comas) */ 
                return { 
                    type: 'ARRAY', 
                    values: arr
                };
             },
        peg$c22 = function(value) {
             return {
               type: 'STRING',
               value: value
             }
          },
        peg$c23 = { type: "other", description: "( \t\n\r)" },
        peg$c24 = /^[ \t\n\r]/,
        peg$c25 = { type: "class", value: "[ \\t\\n\\r]", description: "[ \\t\\n\\r]" },
        peg$c26 = { type: "other", description: "condition" },
        peg$c27 = "==",
        peg$c28 = { type: "literal", value: "==", description: "\"==\"" },
        peg$c29 = "!=",
        peg$c30 = { type: "literal", value: "!=", description: "\"!=\"" },
        peg$c31 = "<=",
        peg$c32 = { type: "literal", value: "<=", description: "\"<=\"" },
        peg$c33 = ">=",
        peg$c34 = { type: "literal", value: ">=", description: "\">=\"" },
        peg$c35 = "<",
        peg$c36 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c37 = ">",
        peg$c38 = { type: "literal", value: ">", description: "\">\"" },
        peg$c39 = function(op) { return op; },
        peg$c40 = "=",
        peg$c41 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c42 = { type: "other", description: "operator" },
        peg$c43 = /^[+\-]/,
        peg$c44 = { type: "class", value: "[+-]", description: "[+-]" },
        peg$c45 = /^[*\/]/,
        peg$c46 = { type: "class", value: "[*/]", description: "[*/]" },
        peg$c47 = "(",
        peg$c48 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c49 = ")",
        peg$c50 = { type: "literal", value: ")", description: "\")\"" },
        peg$c51 = "[",
        peg$c52 = { type: "literal", value: "[", description: "\"[\"" },
        peg$c53 = "]",
        peg$c54 = { type: "literal", value: "]", description: "\"]\"" },
        peg$c55 = "{",
        peg$c56 = { type: "literal", value: "{", description: "\"{\"" },
        peg$c57 = "}",
        peg$c58 = { type: "literal", value: "}", description: "\"}\"" },
        peg$c59 = "const",
        peg$c60 = { type: "literal", value: "const", description: "\"const\"" },
        peg$c61 = "var",
        peg$c62 = { type: "literal", value: "var", description: "\"var\"" },
        peg$c63 = "function",
        peg$c64 = { type: "literal", value: "function", description: "\"function\"" },
        peg$c65 = "if",
        peg$c66 = { type: "literal", value: "if", description: "\"if\"" },
        peg$c67 = "then",
        peg$c68 = { type: "literal", value: "then", description: "\"then\"" },
        peg$c69 = "else",
        peg$c70 = { type: "literal", value: "else", description: "\"else\"" },
        peg$c71 = "while",
        peg$c72 = { type: "literal", value: "while", description: "\"while\"" },
        peg$c73 = "do",
        peg$c74 = { type: "literal", value: "do", description: "\"do\"" },
        peg$c75 = "for",
        peg$c76 = { type: "literal", value: "for", description: "\"for\"" },
        peg$c77 = "return",
        peg$c78 = { type: "literal", value: "return", description: "\"return\"" },
        peg$c79 = ";",
        peg$c80 = { type: "literal", value: ";", description: "\";\"" },
        peg$c81 = ",",
        peg$c82 = { type: "literal", value: ",", description: "\",\"" },
        peg$c83 = "=>",
        peg$c84 = { type: "literal", value: "=>", description: "\"=>\"" },
        peg$c85 = "\"",
        peg$c86 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c87 = /^[a-zA-Z0-9_ ]/,
        peg$c88 = { type: "class", value: "[a-zA-Z0-9_ ]", description: "[a-zA-Z0-9_ ]" },
        peg$c89 = function(str) { return str.join(""); },
        peg$c90 = { type: "other", description: "identifier" },
        peg$c91 = /^[a-zA-Z_]/,
        peg$c92 = { type: "class", value: "[a-zA-Z_]", description: "[a-zA-Z_]" },
        peg$c93 = /^[a-zA-Z_0-9]/,
        peg$c94 = { type: "class", value: "[a-zA-Z_0-9]", description: "[a-zA-Z_0-9]" },
        peg$c95 = function(id) { return { type: 'ID', value: id }; },
        peg$c96 = { type: "other", description: "number" },
        peg$c97 = /^[0-9]/,
        peg$c98 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c99 = function(digits) { return { type: 'NUM', value: parseInt(digits, 10) }; },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
          p, ch;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column,
          seenCR: details.seenCR
        };

        while (p < pos) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseprogram() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parseblock();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c0(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseblock() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parseconstantDeclaration();
      if (s1 === peg$FAILED) {
        s1 = null;
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parsevariableDeclaration();
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parsefunctionDeclaration();
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parsefunctionDeclaration();
          }
          if (s3 !== peg$FAILED) {
            s4 = [];
            s5 = peg$parsestatement();
            while (s5 !== peg$FAILED) {
              s4.push(s5);
              s5 = peg$parsestatement();
            }
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c1(s1, s2, s3, s4);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseconstantDeclaration() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;

      s0 = peg$currPos;
      s1 = peg$parseCONST();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseID();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseASSIGN();
          if (s3 !== peg$FAILED) {
            s4 = peg$parseNUMBER();
            if (s4 !== peg$FAILED) {
              s5 = [];
              s6 = peg$currPos;
              s7 = peg$parseCOMMA();
              if (s7 !== peg$FAILED) {
                s8 = peg$parseID();
                if (s8 !== peg$FAILED) {
                  s9 = peg$parseASSIGN();
                  if (s9 !== peg$FAILED) {
                    s10 = peg$parseNUMBER();
                    if (s10 !== peg$FAILED) {
                      s7 = [s7, s8, s9, s10];
                      s6 = s7;
                    } else {
                      peg$currPos = s6;
                      s6 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s6;
                    s6 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s6;
                  s6 = peg$FAILED;
                }
              } else {
                peg$currPos = s6;
                s6 = peg$FAILED;
              }
              while (s6 !== peg$FAILED) {
                s5.push(s6);
                s6 = peg$currPos;
                s7 = peg$parseCOMMA();
                if (s7 !== peg$FAILED) {
                  s8 = peg$parseID();
                  if (s8 !== peg$FAILED) {
                    s9 = peg$parseASSIGN();
                    if (s9 !== peg$FAILED) {
                      s10 = peg$parseNUMBER();
                      if (s10 !== peg$FAILED) {
                        s7 = [s7, s8, s9, s10];
                        s6 = s7;
                      } else {
                        peg$currPos = s6;
                        s6 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s6;
                      s6 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s6;
                    s6 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s6;
                  s6 = peg$FAILED;
                }
              }
              if (s5 !== peg$FAILED) {
                s6 = peg$parseSEMICOLON();
                if (s6 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c2(s2, s4, s5);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsevariableDeclaration() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;

      s0 = peg$currPos;
      s1 = peg$parseVAR();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseID();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseASSIGN();
          if (s3 === peg$FAILED) {
            s3 = null;
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parsefactor();
            if (s4 === peg$FAILED) {
              s4 = null;
            }
            if (s4 !== peg$FAILED) {
              s5 = [];
              s6 = peg$currPos;
              s7 = peg$parseCOMMA();
              if (s7 !== peg$FAILED) {
                s8 = peg$parseID();
                if (s8 !== peg$FAILED) {
                  s9 = peg$parseASSIGN();
                  if (s9 === peg$FAILED) {
                    s9 = null;
                  }
                  if (s9 !== peg$FAILED) {
                    s10 = peg$parsefactor();
                    if (s10 === peg$FAILED) {
                      s10 = null;
                    }
                    if (s10 !== peg$FAILED) {
                      s7 = [s7, s8, s9, s10];
                      s6 = s7;
                    } else {
                      peg$currPos = s6;
                      s6 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s6;
                    s6 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s6;
                  s6 = peg$FAILED;
                }
              } else {
                peg$currPos = s6;
                s6 = peg$FAILED;
              }
              while (s6 !== peg$FAILED) {
                s5.push(s6);
                s6 = peg$currPos;
                s7 = peg$parseCOMMA();
                if (s7 !== peg$FAILED) {
                  s8 = peg$parseID();
                  if (s8 !== peg$FAILED) {
                    s9 = peg$parseASSIGN();
                    if (s9 === peg$FAILED) {
                      s9 = null;
                    }
                    if (s9 !== peg$FAILED) {
                      s10 = peg$parsefactor();
                      if (s10 === peg$FAILED) {
                        s10 = null;
                      }
                      if (s10 !== peg$FAILED) {
                        s7 = [s7, s8, s9, s10];
                        s6 = s7;
                      } else {
                        peg$currPos = s6;
                        s6 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s6;
                      s6 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s6;
                    s6 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s6;
                  s6 = peg$FAILED;
                }
              }
              if (s5 !== peg$FAILED) {
                s6 = peg$parseSEMICOLON();
                if (s6 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c3(s2, s4, s5);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseanonymousFunction() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8;
